--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pupis.github.io",
   "version": "0.0.3",
-  "description": "A Vue.js project",
+  "description": "pupis.github.io for personal page",
   "author": "Pupis",
   "private": true,
   "scripts": {
